# gs

./: Cargo.toml  Dockerfile  README.md  TODO
pathing/: Cargo.toml
pathing/src/path/: mod.rs
src/: configuration.rs  file_routing.rs  gs.rs
src/configuration/: mod.rs
src/db/: mod.rs
src/fs_parse/: builder.rs  manager.rs
src/pathing/: mod.rs  objects.rs  references.rs  utils.rs
src/routing/: errors.rs  mod.rs  objects.rs  parser.rs  references.rs
src/server/: mod.rs  parser.rs  request.rs  response.rs  threading.rs  transient_request.rs
ssl/: cert.pem  key.pem
themes/staticFile/: index.html
