[package]
name = "gs"
version = "0.1.0"
authors = ["Kent Utterback <dev@kentutterback.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web =  { version = "3.0"} # , features = ["openssl"] }
# actix-rt = "1.1"
# actix-files = "*"
ctrlc = { version = "*", features = ["termination"] }
io = "*"
redis = "*"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
futures = "*"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "*"
# openssl = { version="0.10" }
# thiserror = "1.0"


[[bin]]
name = "gs"
path = "src/gs.rs"
