[package]
name = "gs"
version = "0.1.0"
authors = ["Kent Utterback <dev@kentutterback.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web =  { version = "3.0"} # , features = ["openssl"] }
# actix-rt = "1.1"
# actix-files = "*"
ctrlc = { version = "*", features = ["termination"] }
io = "*"
redis = "*"
futures = "*"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "*"
regex = "*"
# openssl = { version="0.10" }
# thiserror = "1.0"


[[bin]]
name = "gs"
path = "src/gs.rs"
